examples/bad/loose_break.soy
break; # ERROR: not in while loop

continue; # ERROR: not in while loop